--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Git basic</title>
 </head>
 <body>
-    <h1>Hi, I'm Mr.Pink...</h1>
+    <h1>Hi, I'm Mr.Pink_The_Pink_Lover@143...</h1>
 </body>
 </html>
